vlib/v/checker/tests/sumtype_init_with_ref_fields_err.out
vlib/v/checker/tests/sumtype_init_with_ref_fields_err.vv:9:10: error: reference field `Node.parent` must be initialized
    7 | 
    8 | fn main() {
    9 |     s := Sumtype{}
      |          ~~~~~~~~~
   10 |     dump(s)
   11 | }
vlib/v/checker/tests/sumtype_init_with_ref_fields_err.vv:9:10: error: reference field `Node.left` must be initialized
    7 | 
    8 | fn main() {
    9 |     s := Sumtype{}
      |          ~~~~~~~~~
   10 |     dump(s)
   11 | }
vlib/v/checker/tests/sumtype_init_with_ref_fields_err.vv:9:10: error: reference field `Node.right` must be initialized
    7 | 
    8 | fn main() {
    9 |     s := Sumtype{}
      |          ~~~~~~~~~
   10 |     dump(s)
   11 | }
