vlib/v/checker/tests/sumtype_init_with_ref_fields_err.vv
struct Node {
	parent &Node
	left   &Node
	right  &Node
}

type Sumtype = Node | int

fn main() {
	s := Sumtype{}
	dump(s)
}
